--- a/setup_on_vm/Vagrantfile
+++ b/setup_on_vm/Vagrantfile
@@ -34,6 +34,8 @@ Vagrant.configure("2") do |config|
   config.vm.network "private_network", ip: "192.168.33.25"
 
   config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/me.pub"
+  config.vm.provision "file", source: "./setup_prometheus.sh", destination: "~/setup_prometheus.sh"
+  config.vm.provision "file", source: "./setup_node_exporter.sh", destination: "~/setup_node_exporter.sh"
   
   config.vm.provision "shell", inline: <<-SHELL
   cat /home/vagrant/.ssh/me.pub >> /home/vagrant/.ssh/authorized_keys
