--- a/setup_on_vm/Vagrantfile
+++ b/setup_on_vm/Vagrantfile
@@ -36,12 +36,14 @@ Vagrant.configure("2") do |config|
   config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/me.pub"
   config.vm.provision "file", source: "./setup_prometheus.sh", destination: "~/setup_prometheus.sh"
   config.vm.provision "file", source: "./setup_node_exporter.sh", destination: "~/setup_node_exporter.sh"
+  config.vm.provision "file", source: "./setup_grafana.sh", destination: "~/setup_grafana.sh"
   config.vm.provision "file", source: "./prometheus.yml", destination: "~/prometheus.yml"
   
   config.vm.provision "shell", inline: <<-SHELL
   cat /home/vagrant/.ssh/me.pub >> /home/vagrant/.ssh/authorized_keys
   ./setup_prometheus.sh
   ./setup_node_exporter.sh
+  ./setup_grafana.sh
 SHELL
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
